crates/proef-cli/tests/snapshots/corpus__artifact__500-api-note--a-note-posted-via-the-api-appears-on-the-board.vars.snap
---
source: crates/proef-cli/tests/corpus.rs
expression: "String::from_utf8(content_a).unwrap()"
---
# proef variables for 500-api-note--a-note-posted-via-the-api-appears-on-the-board.hurl
# secret `apiToken` — supply at replay: --secret apiToken=<value>
