crates/proef-cli/tests/snapshots/corpus__artifact__501-api-calendar--an-appointment-created-via-the-api-appears-in-the-calendar-feed.hurl.snap
---
source: crates/proef-cli/tests/corpus.rs
expression: "String::from_utf8(content_a).unwrap()"
---
# proef artifact — An appointment created via the API appears in the calendar feed
# source: tests/features/501_api_calendar.feature:10
# replay: hurl --test 501-api-calendar--an-appointment-created-via-the-api-appears-in-the-calendar-feed.hurl --variables-file 501-api-calendar--an-appointment-created-via-the-api-appears-in-the-calendar-feed.vars --secret apiToken=<value>

# tests/features/501_api_calendar.feature:11 — the client environment is provisioned (fixture warm-up probe)
# optional
GET http://127.0.0.1:8787/health
HTTP 200

# tests/features/501_api_calendar.feature:11 — the client environment is provisioned (provision the environment)
POST http://127.0.0.1:8787/api/v1/env/provision
Authorization: Bearer {{apiToken}}
{"run": "proef-snapshot"}
HTTP 201
[Captures]
envId: jsonpath "$.id"

# tests/features/501_api_calendar.feature:12 — the client feed is activated and ready (request activation)
POST http://127.0.0.1:8787/api/v1/feed/activate
X-Proef-Env: {{envId}}
Authorization: Bearer {{apiToken}}
{"env": "{{envId}}"}
HTTP 200
[Captures]
feedId: jsonpath "$.feedId"

# tests/features/501_api_calendar.feature:12 — the client feed is activated and ready (feed reports ready)
GET http://127.0.0.1:8787/api/v1/feed/{{feedId}}/state
X-Proef-Env: {{envId}}
[Options]
retry: 10
retry-interval: 300ms
HTTP 200
[Asserts]
jsonpath "$.status" == "ready"

# tests/features/501_api_calendar.feature:13 — the client Bakker-${run:id} is resolved (search clients for Bakker-proef-snapshot)
GET http://127.0.0.1:8787/api/v1/admin/search/clients
Authorization: Bearer {{apiToken}}
[Query]
q: Bakker-proef-snapshot
HTTP 200
[Captures]
clientId: jsonpath "$[0].id"

# tests/features/501_api_calendar.feature:13 — the client Bakker-${run:id} is resolved (confirm the client exists)
GET http://127.0.0.1:8787/api/v1/clients/{{clientId}}
Authorization: Bearer {{apiToken}}
HTTP 200
[Asserts]
jsonpath "$.id" == "{{clientId}}"

# tests/features/501_api_calendar.feature:14 — the relative schedules an appointment (create the agenda event)
POST http://127.0.0.1:8787/api/v1/clients/{{clientId}}/agenda/events
X-Proef-Env: {{envId}}
Authorization: Bearer {{apiToken}}
{"title": "Koffie", "run": "proef-snapshot"}
HTTP 201
[Captures]
eventId: jsonpath "$.id"

# tests/features/501_api_calendar.feature:15 — the backend dispatches a push notification (push visible in queue)
GET http://127.0.0.1:8787/api/v1/push/queue
X-Proef-Env: {{envId}}
Authorization: Bearer {{apiToken}}
[Options]
retry: 10
retry-interval: 300ms
HTTP 200
[Asserts]
jsonpath "$.items" count > 0

# tests/features/501_api_calendar.feature:16 — the client calendar feed shows the appointment (appointment visible in the feed)
GET http://127.0.0.1:8787/api/v1/feed/{{feedId}}/calendar
X-Proef-Env: {{envId}}
[Options]
retry: 10
retry-interval: 300ms
HTTP 200
[Asserts]
jsonpath "$.events[0].id" == "{{eventId}}"
