crates/proef-cli/tests/snapshots/corpus__artifact__501-api-calendar--an-appointment-created-via-the-api-appears-in-the-calendar-feed.map.json.snap
---
source: crates/proef-cli/tests/corpus.rs
expression: "String::from_utf8(content_a).unwrap()"
---
{
  "schema": 1,
  "entries": [
    {
      "hurl_lines": [
        7,
        8
      ],
      "feature": {
        "file": "tests/features/501_api_calendar.feature",
        "line": 11,
        "text": "the client environment is provisioned"
      },
      "optional": true,
      "captures": [],
      "batch": 0,
      "step": 0
    },
    {
      "hurl_lines": [
        11,
        16
      ],
      "feature": {
        "file": "tests/features/501_api_calendar.feature",
        "line": 11,
        "text": "the client environment is provisioned"
      },
      "optional": false,
      "captures": [
        "envId"
      ],
      "batch": 1,
      "step": 0
    },
    {
      "hurl_lines": [
        19,
        25
      ],
      "feature": {
        "file": "tests/features/501_api_calendar.feature",
        "line": 12,
        "text": "the client feed is activated and ready"
      },
      "optional": false,
      "captures": [
        "feedId"
      ],
      "batch": 1,
      "step": 1
    },
    {
      "hurl_lines": [
        28,
        35
      ],
      "feature": {
        "file": "tests/features/501_api_calendar.feature",
        "line": 12,
        "text": "the client feed is activated and ready"
      },
      "optional": false,
      "captures": [],
      "batch": 1,
      "step": 2
    },
    {
      "hurl_lines": [
        38,
        44
      ],
      "feature": {
        "file": "tests/features/501_api_calendar.feature",
        "line": 13,
        "text": "the client Bakker-${run:id} is resolved"
      },
      "optional": false,
      "captures": [
        "clientId"
      ],
      "batch": 1,
      "step": 3
    },
    {
      "hurl_lines": [
        47,
        51
      ],
      "feature": {
        "file": "tests/features/501_api_calendar.feature",
        "line": 13,
        "text": "the client Bakker-${run:id} is resolved"
      },
      "optional": false,
      "captures": [],
      "batch": 1,
      "step": 4
    },
    {
      "hurl_lines": [
        54,
        60
      ],
      "feature": {
        "file": "tests/features/501_api_calendar.feature",
        "line": 14,
        "text": "the relative schedules an appointment"
      },
      "optional": false,
      "captures": [
        "eventId"
      ],
      "batch": 1,
      "step": 5
    },
    {
      "hurl_lines": [
        63,
        71
      ],
      "feature": {
        "file": "tests/features/501_api_calendar.feature",
        "line": 15,
        "text": "the backend dispatches a push notification"
      },
      "optional": false,
      "captures": [],
      "batch": 1,
      "step": 6
    },
    {
      "hurl_lines": [
        74,
        81
      ],
      "feature": {
        "file": "tests/features/501_api_calendar.feature",
        "line": 16,
        "text": "the client calendar feed shows the appointment"
      },
      "optional": false,
      "captures": [],
      "batch": 1,
      "step": 7
    }
  ]
}
