crates/proef-cli/tests/snapshots/corpus__artifact__501-api-calendar--an-appointment-created-via-the-api-appears-in-the-calendar-feed.vars.snap
---
source: crates/proef-cli/tests/corpus.rs
expression: "String::from_utf8(content_a).unwrap()"
---
# proef variables for 501-api-calendar--an-appointment-created-via-the-api-appears-in-the-calendar-feed.hurl
# secret `apiToken` — supply at replay: --secret apiToken=<value>
